# strands_exploration

./: .gitignore  README.md
activity_exploration/: CMakeLists.txt  package.xml  setup.py
activity_exploration/config/: region_to_wp.yaml
activity_exploration/launch/: activity_exploration.launch  activity_recommendation.launch
activity_exploration/msg/: ExplorationChoice.msg
activity_exploration/scripts/: client_srv_test.py  counting_manager.py
activity_exploration/src/activity_exploration/: budget_control.py  exploration.py  recommender.py
activity_exploration/src/periodic_poisson_processes/: people_poisson.py  poisson_processes.py  poisson_wrapper.py  rate.py
activity_exploration/src/region_observation/: observation_proxy.py  observe.py
edge_exploration/: CMakeLists.txt  package.xml
edge_exploration/scripts/: edge_bidder.py  exploration_slots.py
exploration_bid_manager/: CMakeLists.txt  package.xml  setup.py
exploration_bid_manager/scripts/: dummy_exploration_bidder.py
exploration_bid_manager/src/exploration_bid_manager/: __init__.py  exploration_bidder.py
exploration_task/: CMakeLists.txt  package.xml  setup.py
exploration_tasks_generator/: CMakeLists.txt  package.xml  setup.py
exploration_tasks_generator/scripts/: exploration_tasks_generator_node.py  fake_edge_exploration.py  fake_fremen_grid_exploration.py
exploration_tasks_generator/src/exploration_tasks_generator/: __init__.py  exploration_services_manager.py
popp_exploration/: CMakeLists.txt  package.xml  setup.py
popp_exploration/launch/: popp_exploration.launch
popp_exploration/msg/: ExplorationChoice.msg
popp_exploration/src/popp_exploration/: bidding_manager.py  exploration.py
spatiotemporal_exploration/: CMakeLists.txt  README.md  package.xml
spatiotemporal_exploration/action/: Observe.action
spatiotemporal_exploration/cfg/: .exploration.cfg.swp  exploration.cfg
spatiotemporal_exploration/launch/: spatiotemporal_exploration.launch  topological_exploration.launch
spatiotemporal_exploration/scripts/: robot_start.sh
spatiotemporal_exploration/src/: CFremenGridExp.cpp  CFremenGridSet.h  CTimerExp.cpp  spatiotemporal_bidder.py  spatiotemporal_exploration.cpp  spatiotemporal_object.py
strands_exploration/: CMakeLists.txt  package.xml
strands_exploration/launch/: strands_exploration.launch  strands_exploration_with_bidder.launch
strands_exploration_msgs/: CMakeLists.txt  package.xml
strands_exploration_msgs/msg/: ExplorationSchedule.msg  ExplorationTaskStatus.msg  Frelement.msg  FremenGrid.msg
strands_exploration_msgs/srv/: AddView.srv  GetExplorationTask.srv  LoadGrid.srv  SaveGrid.srv
topological_exploration/: CMakeLists.txt  package.xml
topological_exploration/cfg/: exploration.cfg
topological_exploration/launch/: topological_exploration.launch
topological_exploration/msg/: Frelement.msg  Frelement.msg~  FremenGrid.msg  FremenGrid.msg~  SFrelement.msg
topological_exploration/scripts/: grid_store.py  sim_start.sh
topological_exploration/src/: CFrelement.cpp  CFrelement.h  CFrelementExp.cpp  CFrelementExp.h  CFremenGrid.cpp  CFremenGrid.h  CFremenGridExp.cpp  CFremenGridExp.h  CFremenGridSet.cpp  CFremenGridSet.h  CTimerExp.h  topological_exploration.cpp
topological_exploration/srv/: LoadGrid.srv  SaveGrid.srv  Visualize.srv
