<?xml version="1.0"?>
<package>
  <name>topological_exploration</name>
  <version>0.0.0</version>
  <description>The spatiotemporal_topological_exploration package</description>

  <maintainer email="jsantos@lincoln.ac.uk">Joao Santos</maintainer>


  <license>MIT</license>


  <url type="github">http://github.com/strands-project/strands_exploration</url>




  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <build_depend>strands_executive_msgs</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>scitos_msgs</build_depend>
  <build_depend>exploration_task</build_depend>
  <build_depend>scitos_apps</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>scitos_msgs</run_depend>
  <run_depend>exploration_task</run_depend>
  <run_depend>scitos_apps</run_depend>


  <export>

  </export>
</package>
